--- a/csstests/public/autocomplete/selector.css
+++ b/csstests/public/autocomplete/selector.css
@@ -39,3 +39,16 @@ h2 + p {
     font-size: 1.5em;
     color: #2b542c;
 }
+
+/*-----First Line and first Letter-----*/
+
+.line-text {
+    width: 400px;
+    margin: auto;
+    padding-top: 15px;
+}
+
+.line-text::first-line {
+    font-weight: bold;
+    font-size: ;
+}
